--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,39 @@
   background-color: rgb(144 171 209);
   color: #ffffff;
 }
+
+.title-text {
+  font-family: "Poppins";
+  font-size: 50px;
+  font-weight: 500;
+  font-style: normal;
+  text-align: left;
+  color: #333333;
+}
+
+.title-desc {
+  font-family: "Poppins";
+  font-size: 28px;
+  font-weight: normal;
+  font-style: normal;
+  text-align: left;
+  color: #333333;
+}
+
+th {
+  font-family: "Poppins";
+  font-size: 30px;
+  font-weight: 500;
+  font-style: normal;
+  text-align: left;
+  color: #979797;
+}
+
+td {
+  font-family: "Poppins";
+  font-size: 24px;
+  font-weight: 500;
+  font-style: normal;
+  text-align: left;
+  color: #333333;
+}
