--- a/src/Pages/Student/Student.scss
+++ b/src/Pages/Student/Student.scss
@@ -3,8 +3,8 @@
     margin-top: 3rem;
     margin-bottom: 10rem;
 
-    @media (min-width: 768px) and (orientation: portrait) {
-        max-width: 750px;
+    @media (min-width: 768px) {
+        max-width: 800px;
     }
 
     @media (min-width: 992px) {
@@ -19,7 +19,7 @@
         max-width: 1400px;
     }
 
-    @media (min-width: 1440px) {
-        max-width: 1440px;
+    @media (min-width: 1441px) {
+        min-width: 1440px;
     }
 }
