--- a/src/ResuableComponent/CustomModal/CustomModal.scss
+++ b/src/ResuableComponent/CustomModal/CustomModal.scss
@@ -1,6 +1,9 @@
 /* Modal.css */
 @import '../../assests/scss/global.scss';
 
+.modal-dialog{
+    margin-top: 8% !important;
+}
 
 .modal-backdrop {
     opacity: 1;
@@ -16,31 +19,44 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    // z-index: 1000;
-    // background-color: rgba(0, 0, 0, 0.54) !important;
 }
 
 .modal-container {
     background: white;
-    max-width: 500px;
+    max-width: 600px;
+    width: 550px;
     padding: 20px;
-    border-radius: 8px;
+    border-radius: 24px !important;
     position: relative;
-    // opacity: 100 !important;
+}
+
+.modal-content{
+    border-radius: 24px !important;
 }
 
 .modal-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: none  !important;
+    padding: 2rem 3rem 0px 3rem !important;
 
     .main-title {
-        color: $main-header-color;
-        @include header-style;
+        font-family: "Poppins";
+        font-size: 36px;
+        font-weight: normal;
+        font-style: normal;
+        text-align: left;
+        color: #000000;
     }
 
     .sub-title {
-        @include sub-header-style;
+        font-family: "Poppins";
+        font-size: 24px;
+        font-weight: normal;
+        font-style: normal;
+        text-align: left;
+        color: #838383;
     }
 }
 
@@ -52,6 +68,11 @@
 
     width: 30px;
     height: 25px;
+    margin-top: 0.5rem;
+
+    position: absolute;
+    top: 0%;
+    right: 3%;
 
     svg {
         path {
@@ -61,5 +82,19 @@
 }
 
 .modal-body {
-    margin-top: 15px;
+    margin-top: -1rem;
 }
+
+.remember-me {
+    font-family: "Poppins";
+    font-size: 16px;
+    font-weight: normal;
+    font-style: normal;
+    text-align: left;
+    color: #333333;
+}
+
+.material-error-message {
+    white-space: pre-line; 
+    color: red;
+  }
