--- a/src/ResuableComponent/NestedColTable/NestedColTable.scss
+++ b/src/ResuableComponent/NestedColTable/NestedColTable.scss
@@ -60,8 +60,8 @@
       font-size: 18px;
       font-weight: 600;
       width: 100%;
-      
-      option{
+
+      option {
         background-color: #fff;
         color: #000;
         text-align: left;
@@ -77,8 +77,13 @@
       th {
         border-right: 1px solid rgb(204, 204, 204);
         padding: 20px;
-        color: rgb(204, 204, 204);
-        font-weight: bold;
+
+        font-family: "Poppins";
+        font-size: 28px;
+        font-weight: 500;
+        font-style: normal;
+        text-align: left;
+        color: #979797;
 
         &:last-child {
           border-right: none;
@@ -95,12 +100,19 @@
         border-right: 1px solid rgb(204, 204, 204);
         padding: 20px;
 
+        font-family: "Poppins";
+        font-size: 18px;
+        font-weight: 500;
+        font-style: normal;
+        text-align: left;
+        color: #333333;
+
         &:last-child {
           border-right: none;
         }
       }
 
-      .action-cell{
+      .action-cell {
         display: flex;
         gap: 12px;
       }
