--- a/src/ResuableComponent/Tab/Tab.scss
+++ b/src/ResuableComponent/Tab/Tab.scss
@@ -3,31 +3,47 @@
     position: relative;
     padding-bottom: 5px;
     cursor: pointer;
+
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+    font-size: 24px;
+    font-weight: normal;
+    font-style: normal;
+    text-align: left;
+    color: #ffffff;
 }
 
 .nav-link.active {
     border-bottom: 3px solid #fff;
 }
 
-.navbar-nav{
-    gap: 64px
+.navbar-nav {
+    gap: 64px;
+    font-family: "Segoe UI";
+    font-size: 24px;
+    font-weight: normal;
+    font-style: normal;
+    text-align: left;
+    color: #ffffff;
 }
 
-.dropdown-item{
+.dropdown-item {
     border-bottom: 1px solid #ccc;
     padding: 0.7rem 0.3rem 0.7rem 1rem !important;
     color: #000;
     display: flex !important;
     justify-content: space-between !important;
-    gap: 4rem !important; 
+    gap: 4rem !important;
     border-bottom: 2px solid #ccc !important;
     border-radius: 10px 10px 0px 0px !important;
+    cursor: pointer;
 
-    svg{
+    svg {
         width: 24px;
         height: 24px;
     }
-    &:active{
+
+    &:active {
         border-radius: 0px !important;
     }
 }
