--- a/src/ResuableComponent/ToggleButton/ToggleButton.scss
+++ b/src/ResuableComponent/ToggleButton/ToggleButton.scss
@@ -1,28 +1,33 @@
 .toggle-button {
-    display: flex;
-    border-radius: 25px;
-    overflow: hidden;
-    border: 1px solid #0070c0;
-  
-    button {
-      flex: 1;
-      padding: 10px 20px;
-      font-size: 14px;
-      font-weight: bold;
-      color: #0070c0;
-      background-color: white;
-      border: none;
-      cursor: pointer;
-      transition: background-color 0.3s ease, color 0.3s ease;
-  
-      &:focus {
-        outline: none;
-      }
-  
-      &.active {
-        color: white;
-        background-color: #0070c0;
-      }
+  display: flex;
+  border-radius: 31px;
+  overflow: hidden;
+  border: 1px solid #0275be;
+
+  button {
+    flex: 1;
+    padding: 10px 20px;
+    font-weight: bold;
+    color: #0070c0;
+    background-color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+    font-family: "Segoe UI";
+    font-size: 18px;
+    font-weight: normal;
+    font-style: normal;
+    text-align: left;
+    white-space: nowrap;
+
+    &:focus {
+      outline: none;
+    }
+
+    &.active {
+      color: #ffffff;
+      background-color: #0275be;
     }
   }
-  
+}
