--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -25,17 +25,25 @@
             gap: 12px;
             margin: 1rem 0;
 
-            @include sub-header-style;
-            color: #fff;
-
+            font-family: "Poppins";
+            font-size: 22px;
+            font-weight: 300;
+            font-style: normal;
+            text-align: left;
+            color: #fafafa;
         }
     }
 
     .footer-row-two {
         padding: 20px 35px;
 
-        .cc-text{
-            color: #fff;
+        .cc-text {
+            font-family: "Poppins";
+            font-size: 18px;
+            font-weight: 300;
+            font-style: normal;
+            text-align: left;
+            color: #fafafa;
         }
 
     }
