--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -13,45 +13,66 @@
         box-shadow: 10px 10px 4px 0px #ccc;
 
         .announcement-label {
-            background-color: #d9534f; // Red color for the label
-            color: white;
-            font-weight: bold;
+            background-color: #d9534f;
             padding: 0.2rem 0.5rem;
             position: absolute;
             top: 20px;
             left: -10px;
-            border-radius: 3px;
-            font-size: 0.9rem;
+
+            font-family: "Poppins";
+            font-size: 26px;
+            font-weight: normal;
+            font-style: normal;
+            text-align: left;
+            color: #ffffff;
         }
 
         .announcement-text {
-            margin-top: 1.5rem;
-            color: #333;
-            font-size: 1rem;
-            font-weight: 700;
+            margin-top: 2.5rem;
+            font-family: "Poppins";
+            font-size: 28px;
+            font-weight: 500;
+            font-style: normal;
+            text-align: left;
+            color: #333333;
         }
     }
 
     .welcome-section {
 
         h2 {
-            color: #0d6efd; 
-            font-weight: bold;
-            margin-bottom: 1rem;
+            font-family: "Poppins";
+            font-size: 48px;
+            font-weight: normal;
+            font-style: normal;
+            text-align: left;
+            color: #0275be;
+            margin: -2rem 0rem 1rem 0rem;
         }
 
         .welcome-text {
-            color: #555;
-            margin-bottom: 1rem;
+            font-family: "Poppins";
+            font-size: 22px;
+            font-weight: normal;
+            font-style: normal;
+            text-align: left;
+            color: #000000;
         }
 
         .know-more-btn {
-            background-color: #b3200d;
             border: none;
             padding: 0.5rem 1.5rem;
-            font-weight: bold;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: background-color 0.3s;
+            border-radius: 12px;
+            filter: drop-shadow(8px 8px 7.5px rgba(0, 0, 0, 0.16));
+            background: #b3200d;
+            font-family: "Poppins";
+            font-size: 28px;
+            font-weight: normal;
+            font-style: normal;
+            text-align: center;
+            color: #ffffff;
+            width: 100%;
 
             &:hover {
                 background-color: #c9302c;
@@ -60,16 +81,22 @@
 
         .welcome-image {
             border-radius: 8px;
-            width: 100%;
-            height: auto;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            height: 100%;
+            margin-top: -20px;
+            margin-left: 73px;
+            width: 90%;
         }
     }
 
     .section-title {
-        color: #0d6efd; 
-        font-weight: bold;
         margin-bottom: 1rem;
+        font-family: "Poppins";
+        font-size: 44px;
+        font-weight: normal;
+        font-style: normal;
+        text-align: left;
+        color: #0275be;
     }
 
     .news-events-section {
@@ -95,15 +122,27 @@
                     border-bottom: 1px solid #ccc;
                     margin-bottom: 1rem;
 
-                    .right-chevron{
+                    h4 {
+                        font-family: "Poppins";
+                        font-size: 28px;
+                        font-weight: 500;
+                        font-style: normal;
+                        text-align: left;
+                        color: #333333;
+                    }
+
+                    .right-chevron {
                         border-radius: 60%;
                         height: 27px;
                         width: 27px;
                         text-align: center;
-                        &:hover{
+                        background: rgba(2, 117, 190, 0.5);
+
+                        &:hover {
                             background-color: #0d6efd;
-                            svg{
-                                path{
+
+                            svg {
+                                path {
                                     fill: #fff
                                 }
                             }
@@ -126,12 +165,14 @@
                     }
 
                     .read-more {
-                        color:#b3200d;
                         text-decoration: none;
-                        font-weight: bold;
-                        font-size: 0.9rem;
                         float: right;
-                        text-decoration: underline;
+                        font-family: "Poppins";
+                        font-size: 18px;
+                        font-weight: normal;
+                        font-style: normal;
+                        text-align: left;
+                        color: #b3200d;
 
                         &:hover {
                             text-decoration: underline;
@@ -145,22 +186,24 @@
     }
 
     .divider {
-
         position: relative;
         width: 80%;
         margin: 4rem auto;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 4px solid #cccccc;
 
         span {
             position: absolute;
-            top: -14px;
+            top: -25px;
             left: 48%;
             background: white;
             padding: 0px 10px;
-            width: 9%;
-            color: #ccc;
+            width: 14%;
+            font-family: "Poppins";
+            font-size: 32px;
+            font-weight: 300;
+            font-style: normal;
+            text-align: left;
+            color: #cccccc;
         }
-
     }
-
 }
