Added links for examdetail and editprofile

--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -1,8 +1,7 @@
 .edit-profile {
     margin: 0 auto;
     margin-top: 3rem;
-    padding: 4rem 12rem;
-
+    padding: 3rem 15rem !important;
 
     h2 {
         font-family: "Poppins";
