--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,13 @@ td {
   text-align: left;
   color: #333333;
 }
+
+.app {
+  width: 100%;
+  margin: 0 auto;
+}
+
+
+header, footer, main {
+  width: 100%;
+}
