--- a/src/Pages/Student/Student.scss
+++ b/src/Pages/Student/Student.scss
@@ -1,25 +1,9 @@
 .main-container {
-    margin: 0 auto;
-    margin-top: 3rem;
-    margin-bottom: 10rem;
+    padding: 0px 2rem;
+    margin-bottom: 4rem;
 
-    @media (min-width: 768px) {
-        max-width: 800px;
+    @media(min-width: 992px){
+        padding: 0px
     }
-
-    @media (min-width: 992px) {
-        max-width: 1070px;
-    }
-
-    @media (min-width: 1200px) {
-        max-width: 1200;
-    }
-
-    @media (min-width: 1400px) {
-        max-width: 1400px;
-    }
-
-    @media (min-width: 1441px) {
-        min-width: 1440px;
-    }
+   
 }
