--- a/src/ResuableComponent/CustomModal/CustomModal.scss
+++ b/src/ResuableComponent/CustomModal/CustomModal.scss
@@ -1,100 +1,104 @@
 /* Modal.css */
-@import '../../assests/scss/global.scss';
+@import "../../assests/scss/global.scss";
 
-.modal-dialog{
-    margin-top: 8% !important;
+.modal-dialog {
+  margin-top: 8% !important;
 }
 
 .modal-backdrop {
-    opacity: 1;
-    background: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .modal-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-container {
-    background: white;
-    max-width: 600px;
+  background: white;
+  max-width: 600px;
+  width: 100%;
+  padding: 20px;
+  border-radius: 24px !important;
+  position: relative;
+
+  @media (min-width: 992px) {
     width: 550px;
-    padding: 20px;
-    border-radius: 24px !important;
-    position: relative;
+  }
 }
 
-.modal-content{
-    border-radius: 24px !important;
+.modal-content {
+  border-radius: 24px !important;
 }
 
 .modal-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: none  !important;
-    padding: 2rem 3rem 0px 3rem !important;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: none !important;
+  padding: 2rem 3rem 0px 3rem !important;
 
-    .main-title {
-        font-family: "Poppins";
-        font-size: 36px;
-        font-weight: normal;
-        font-style: normal;
-        text-align: left;
-        color: #000000;
-    }
-
-    .sub-title {
-        font-family: "Poppins";
-        font-size: 24px;
-        font-weight: normal;
-        font-style: normal;
-        text-align: left;
-        color: #838383;
-    }
-}
-
-.modal-close {
-    background: transparent;
-    border: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-
-    width: 30px;
-    height: 25px;
-    margin-top: 0.5rem;
-
-    position: absolute;
-    top: 0%;
-    right: 3%;
-
-    svg {
-        path {
-            fill: #dd0000
-        }
-    }
-}
-
-.modal-body {
-    margin-top: -1rem;
-}
-
-.remember-me {
+  .main-title {
     font-family: "Poppins";
-    font-size: 16px;
+    font-size: 36px;
     font-weight: normal;
     font-style: normal;
     text-align: left;
-    color: #333333;
+    color: #000000;
+  }
+
+  .sub-title {
+    font-family: "Poppins";
+    font-size: 24px;
+    font-weight: normal;
+    font-style: normal;
+    text-align: left;
+    color: #838383;
+  }
+}
+
+.modal-close {
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+
+  width: 30px;
+  height: 25px;
+  margin-top: 0.5rem;
+
+  position: absolute;
+  top: 0%;
+  right: 3%;
+
+  svg {
+    path {
+      fill: #dd0000;
+    }
+  }
+}
+
+.modal-body {
+  margin-top: -1rem;
+}
+
+.remember-me {
+  font-family: "Poppins";
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  text-align: left;
+  color: #333333;
 }
 
 .material-error-message {
-    white-space: pre-line; 
-    color: red;
-  }
+  white-space: pre-line;
+  color: red;
+}
