--- a/src/ResuableComponent/Tab/Tab.scss
+++ b/src/ResuableComponent/Tab/Tab.scss
@@ -18,13 +18,22 @@
 }
 
 .navbar-nav {
-    gap: 64px;
+    gap: 8px;
     font-family: "Segoe UI";
     font-size: 24px;
     font-weight: normal;
     font-style: normal;
     text-align: left;
     color: #ffffff;
+    flex-direction: column !important;
+    width: 100%;
+
+    @media(min-width: 992px){
+        gap: 64px;
+        flex-direction: row !important;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 .dropdown-item {
