--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,10 @@
 .header-container {
     .header-row-one {
-        padding: 20px 35px;
+        padding: 20px 0px;
+
+        @media(min-width: 992px){
+            padding: 20px 35px;
+        }
 
         .logo-wrapper {
             width: 30px;
