--- a/src/components/JossaHelp/Jossahelp.scss
+++ b/src/components/JossaHelp/Jossahelp.scss
@@ -102,6 +102,11 @@ $header-bg-image: url('../../assests/images/JosaaForm1.png');
         display: flex;
         flex-direction: column;
         gap: 22px;
+        padding: 0px 2rem;
+
+        @media(min-width: 992px){
+            padding: 0px
+        }
 
         h3 {
             font-family: "Poppins";
